# OOP-FINAL-PROJECT

./: .gitignore  README.md  RELEASE_NOTES.md  demo.ipynb  pyproject.toml  setup.py
data/: coco_sample.json  employees.json  events.json  social_media_api.json  transactions.json  user_activity_api.json
docs/: API_REFERENCE.md  API_SIMPLIFIED.md  ARCHITECTURE_DIAGRAM.md  CODE_EVALUATION.md  FINAL_ARCHITECTURE.md  HONEST_EVALUATION.md  LIMITATIONS.md  PROJECT_FINAL_STRUCTURE.md  QUICK_REFERENCE.md  REFACTOR_COMPLETE.md
examples/: basic_usage.py  real_world_scenarios.py  unstructured_api_data.py
json_file_helper_libproject/: demo.py  requirements.txt  setup.py
json_file_helper_libproject/json_file_helper_libproject/: __init__.py  module1.py
json_therule0/: API_REFERENCE.md  LICENSE  README.md  __init__.py  advanced.py  analyzer.py  cleaner.py  inspect_metadata.py  jsonfile.py  loader.py  main.py  normalizer.py  patch_dists.py  patch_dists_011.py  pyproject.toml  reader.py  requirements.txt  sample_data.json  setup.py
json_therule0/examples/: basic_usage.py
json_therule0/json_therule0/: __init__.py  cleaner.py  data.json  exceptions.py  loader.py  main.py  reader.py
json_therule0/tests/: test_reader.py
src/json_therule0/: __init__.py  analyzer.py  api.py  exceptions.py  jsonfile.py  normalizer.py  processor.py
tests/: test_cleaner.py  test_jsonfile.py  test_loader.py  test_normalizer.py  test_reader.py
